--- a/app/assets/stylesheets/landing-page.css
+++ b/app/assets/stylesheets/landing-page.css
@@ -36,7 +36,7 @@
   margin: 0;
 }
 
-.srch-error-message, .login-error-message {
+.srch-error-message {
   width: 350px;
   position: absolute;
   top: 105%;
@@ -76,4 +76,22 @@
 #condition-search {
   text-align: left;
   padding-left: 1em;
+}
+
+.lp-stat {
+  font-weight: 300;
+}
+
+.lp-stat + .lp-stat {
+  margin-top: .5em;
+}
+
+.stat-container {
+  display: inline-block;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  left: 50%;
+  top: 37.5%;
+  -webkit-transform: translate(-50%, -50%);
 }
